syntax = "proto3";

option csharp_namespace = "Accommodation";

package accommodation;

service AccommodationGRPCService {
  rpc GetAccommodationGRPC (AccommodationId) returns (AccommodationGRPC);
  rpc GetAccomodationsAutoApproval (AccommodationIdForApproval) returns (AccommodationAutoApproval);
  rpc DeleteAccwithoutHost (UserId) returns (Deleted);
  rpc UpdateDistinguishedHostAccommodations (HostIdAndDistinguishedStatus) returns (UserId);
}

message AccommodationId {
  string id = 1;
}

message AccommodationIdForApproval {
  string accId = 1;
}

message AccommodationGRPC{
  string name = 1;
  string startSeason = 2;
  string endSeason = 3;
  double price = 4;
  bool pricePerGuest = 5;
  bool pricePerAccomodation = 6;
  bool holidayCost = 7;
  bool weekendCost = 8;
  bool summerCost = 9;
  string address = 10;
}
message UserId {
  string id = 1;
}
message Deleted {
  bool isDeleted = 1;
}

message HostIdAndDistinguishedStatus{
	string id = 1;
	bool hostStatus = 2;
}

message AccommodationAutoApproval{
	bool autoApproval = 1;
}

